--- a/wishlist-page/wishlist.html
+++ b/wishlist-page/wishlist.html
@@ -20,13 +20,18 @@
         <ul class="nav-bar__list">
             <li><a class="nav-bar__item" href="/index.html">Home</a></li>
             <li><a class="nav-bar__item" href="/Product-Page/product.html">Product</a></li>
-            <li><a class="nav-bar__item" href="/wishlist-page/wishlist.html"><img class="nav-bar__img--icon nav-bar__img--wishlist"
+
+            <li class="nav-bar__item" ><a href="/wishlist-page/wishlist.html"><img
+                        class="nav-bar__img--icon nav-bar__img--wishlist"
                         src="/assets/image/HomePage-Images/Wishlist.png" alt="Wishlist"></a></li>
-            <li class="nav-bar__item badge__wrapper"><img src="/assets/image/HomePage-Images/cart.png" alt="cart-badge"
-                    class="nav-bar__img--icon nav-bar__img--cart badge__icon--img">
+
+            <li class="nav-bar__item badge__wrapper"><a href="/Cart-Page/cart.html"  ><img
+                        src="/assets/image/HomePage-Images/cart.png" alt="cart-badge"
+                        class="nav-bar__img--icon nav-bar__img--cart badge__icon--img"></a>
                 <span class="badge__icon--primary badge--logo ">1</span>
             </li>
-            <li><a class="nav-bar__item" href=""><img class="nav-bar__img--icon nav-bar__img--login"
+            
+            <li class="nav-bar__item"><a href=""><img class="nav-bar__img--icon nav-bar__img--login"
                         src="/assets/image/HomePage-Images/Login.png" alt="Login/Sign-Up"></a></li>
         </ul>
     </nav>
