--- a/Product-Page/product.html
+++ b/Product-Page/product.html
@@ -77,22 +77,14 @@
 
     <div class="sidebar">
             <input class="sidebar__input--search" type="text" placeholder="Search Product">
-            <div class="sidebar--filter sidebar--price-filter">
+            <div class="sidebar--filter sidebar--filter-price">
                 <h2>Price</h2>
-                <ul class="sidebar__list--price-filter sidebar__list">
-                    <li class="sidebar__item sidebar__item--price-filter">
-                        <input class="sidebar__input" type="radio" name="price">
-                        <label for="Price Filter">Range ₹250 - ₹350 </label>
-                    </li>
-                    <li class="sidebar__item sidebar__item--price-filter">
-                        <input class="sidebar__input" type="radio" name="price">
-                        <label for="Price Filter">Range ₹350 - ₹450 </label>
-                    </li>
-                    <li class="sidebar__item sidebar__item--price-filter" >
-                        <input class="sidebar__input" type="radio" name="price">
-                        <label for="Price Filter">Range ₹550 - ₹650 </label>
-                    </li>
-                </ul>
+                <div class="sidebar--price-filter">
+                    <span class="sidebar--price-filter-initial-value">0</span>
+                    <input class="sidebar--price__range" type="range" min="0" max="800" step="200">
+                    <span class="sidebar--price-filter-max-value">800
+                    </span>
+                </div>
             </div>
             <div class="sidebar--filter sidebar--category-filter">
                 <h2>Category</h2>
