update : update link

--- a/Product-Page/product.html
+++ b/Product-Page/product.html
@@ -31,7 +31,7 @@
                 <span class="badge__icon--primary badge--logo ">1</span>
             </li>
             
-            <li class="nav-bar__item"><a href=""><img class="nav-bar__img--icon nav-bar__img--login"
+            <li class="nav-bar__item"><a href="/Login-page/login.html"><img class="nav-bar__img--icon nav-bar__img--login"
                         src="/assets/image/HomePage-Images/Login.png" alt="Login/Sign-Up"></a></li>
         </ul>
     </nav>
@@ -67,7 +67,7 @@
             <a href="">
                 <li class="hamburger__item">Cart</li>
             </a>
-            <a href="">
+            <a href="/Login-page/login.html">
                 <button class="hamburger__item hamburger__btn ">Login / Sign-Up</button>
             </a>
         </ul>
