--- a/Signup-page/signup.html
+++ b/Signup-page/signup.html
@@ -142,7 +142,7 @@
             <h6 class="footer__content">Designed by Saurabh Chawda</h6>
         </div>
     </div>
-    <script src="/"></script>
+    <script src="signup.js"></script>
 </body>
 
 </html>
