--- a/wishlist-page/wishlist.html
+++ b/wishlist-page/wishlist.html
@@ -31,7 +31,7 @@
                 <span class="badge__icon--primary badge--logo ">1</span>
             </li>
             
-            <li class="nav-bar__item"><a href=""><img class="nav-bar__img--icon nav-bar__img--login"
+            <li class="nav-bar__item"><a href="/Login-page/login.html"><img class="nav-bar__img--icon nav-bar__img--login"
                         src="/assets/image/HomePage-Images/Login.png" alt="Login/Sign-Up"></a></li>
         </ul>
     </nav>
