--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <!-- preloader -->
+
+    <div class="preloader"></div>
+    
     <!-- Navigation Bar Desktop -->
     <nav class="nav-bar nav-bar--simple">
         <nav class="nav-bar--logo">
