--- a/wishlist-page/wishlist.html
+++ b/wishlist-page/wishlist.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <!-- preloader -->
+
+    <div class="preloader"></div>
     <!-- Navigation Bar Desktop -->
     <nav class="nav-bar nav-bar--simple">
         <nav class="nav-bar--logo">
@@ -21,18 +24,19 @@
             <li><a class="nav-bar__item" href="/index.html">Home</a></li>
             <li><a class="nav-bar__item" href="/Product-Page/product.html">Product</a></li>
 
-            <li class="nav-bar__item" ><a href="/wishlist-page/wishlist.html"><img
+            <li class="nav-bar__item"><a href="/wishlist-page/wishlist.html"><img
                         class="nav-bar__img--icon nav-bar__img--wishlist"
                         src="/assets/image/HomePage-Images/Wishlist.png" alt="Wishlist"></a></li>
 
-            <li class="nav-bar__item badge__wrapper"><a href="/Cart-Page/cart.html"  ><img
+            <li class="nav-bar__item badge__wrapper"><a href="/Cart-Page/cart.html"><img
                         src="/assets/image/HomePage-Images/cart.png" alt="cart-badge"
                         class="nav-bar__img--icon nav-bar__img--cart badge__icon--img"></a>
                 <span class="badge__icon--primary badge--logo ">1</span>
             </li>
-            
-            <li class="nav-bar__item"><a href="/Login-page/login.html"><img class="nav-bar__img--icon nav-bar__img--login"
-                        src="/assets/image/HomePage-Images/Login.png" alt="Login/Sign-Up"></a></li>
+
+            <li class="nav-bar__item"><a href="/Login-page/login.html"><img
+                        class="nav-bar__img--icon nav-bar__img--login" src="/assets/image/HomePage-Images/Login.png"
+                        alt="Login/Sign-Up"></a></li>
         </ul>
     </nav>
 
@@ -78,7 +82,7 @@
         <section class="wishlist__header">
             <h3 class="wishlist__title">My Wishlist</h3>
         </section>
-        
+
         <section class="card-product">
 
             <!-- product One -->
