update : preloader in cart

--- a/Cart-Page/cart.html
+++ b/Cart-Page/cart.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <!-- preloader -->
+
+    <div class="preloader"></div>
+
     <!-- Navigation Bar Desktop -->
     <nav class="nav-bar nav-bar--simple">
         <nav class="nav-bar--logo">
@@ -31,8 +35,9 @@
                 <span class="badge__icon--primary badge--logo ">1</span>
             </li>
 
-            <li class="nav-bar__item"><a href="/Login-page/login.html"><img class="nav-bar__img--icon nav-bar__img--login"
-                        src="/assets/image/HomePage-Images/Login.png" alt="Login/Sign-Up"></a></li>
+            <li class="nav-bar__item"><a href="/Login-page/login.html"><img
+                        class="nav-bar__img--icon nav-bar__img--login" src="/assets/image/HomePage-Images/Login.png"
+                        alt="Login/Sign-Up"></a></li>
         </ul>
     </nav>
 
