update : Password Eye button

--- a/Login-page/login.html
+++ b/Login-page/login.html
@@ -86,8 +86,13 @@
                         placeholder="trendyt@gmail.com" name="uname" required>
 
                     <label class="login-form__label login-form--password" for="password"><b>Password</b></label>
-                    <input class="login-form__input-demo login-form__input--password" type="password"
-                        placeholder="Enter Password" name="password" required>
+                    <div class="login-form--password">
+                        <input class="login-form__input-demo login-form__input--password" type="password"
+                            placeholder="Enter Password" name="password" required>
+                        <i class="login-form__input--password-hide-icon" ><img src="/assets/image/Login/eye Show.png"
+                                alt="Show Password"></i>
+                    </div>
+
                 </div>
                 <div class="login-form--remember-forget-password">
                     <label class="login-form--remember-me">
@@ -123,4 +128,3 @@
 </body>
 
 </html>
-
