--- a/Signup-page/signup.html
+++ b/Signup-page/signup.html
@@ -100,8 +100,8 @@
                         placeholder="trendyt@gmail.com" name="uname" required>
 
                     <label class="signup-form__label signup-form--address" for="address"><b>Address</b></label>
-                    <input class="signup-form__input-demo signup-form__input--password" type="address"
-                        placeholder="Enter Password" name="password" required>
+                    <input class="signup-form__input-demo" type="address"
+                        placeholder="Enter Address" name="password" required>
                     </input>
                     <label class="signup-form__label signup-form--contact" for="contact"><b>Contact</b></label>
                     <input class="signup-form__input-demo signup-form__input--contact" type="contact"
@@ -111,14 +111,16 @@
                     <div class="signup-form--user-password-wrapper">
                         <div class="signup-form--password-wrapper signup-form--first-password-wrapper">
                             <label class="signup-form__label signup-form--password" for="password"><b>Password</b></label>
-                            <input class="signup-form__input-demo signup-form__input--password" type="password"
+                            <input class="signup-form__input-demo signup-form__input--password-first" type="password"
                                 placeholder="Enter Password" name="password" required>
                         </div>
                         <div class="signup-form--password-wrapper signup-form--Repeat-password-wrapper">
                             <label class="signup-form__label signup-form--password" for="password"><b>Repeat
                                     Password</b></label>
-                            <input class="signup-form__input-demo signup-form__input--password" type="password"
+                            <input class="signup-form__input-demo signup-form__input--password-second" type="password"
                                 placeholder="Repeat Password" name="password" required>
+                            <i class="signup-form__input--password-hide-icon" ><img src="/assets/image/SignUp/eye Show.png"
+                                    alt="Show Password"></i>
                         </div>
                     </div>
                 <div class="signup-form--submit">
