Feat : LogOut Button

--- a/Login-page/login.html
+++ b/Login-page/login.html
@@ -107,6 +107,9 @@
                 <div class="login-form--new-account">
                     <a class="login-form__btn--new-account" href="/Signup-page/signup.html">Create New Account</a>
                 </div>
+                <div class="login-form--logOut">
+                    <button class="login-form__btn--logOut">LogOut</button>
+                </div>
         </section>
     </main>
     <!-- Footer -->
