Feat : Add Property-Category Page

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     src="/assets/image/HomePage-Images/Trendy-T Man.jpg" alt="men">
 
                 <div class="card-product-category__content--demo">
-                    <h1 class="card-product-category__title card-product-category__title--man">Men's T-shirt</h1>
-                    <a href=""><button class="card-product-category__btn card-product-category__btn--man">Buy
+                    <h1 class="card-product-category__title card-product-category__title--man">Man's T-shirt</h1>
+                    <a href="/Product-Category/mans-category.html"><button class="card-product-category__btn card-product-category__btn--man">Buy
                             Now</button></a>
                 </div>
 
@@ -118,7 +118,7 @@
                     src="/assets/image/HomePage-Images/Trendy-T Women.jpg" alt="women">
                 <div class="card-product-category__content--demo">
                     <h1 class="card-product-category__title card-product-category__title--women">women's T-shirt</h1>
-                    <a href=""><button class="card-product-category__btn card-product-category__btn--women">Buy
+                    <a href="/Product-Category/womens-category.html"><button class="card-product-category__btn card-product-category__btn--women">Buy
                             Now</button></a>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     src="/assets/image/HomePage-Images/Trendy-T Kids.jpg" alt="kid">
                 <div class="card-product-category__content--demo">
                     <h1 class="card-product-category__title card-product-category__title--kid">Kid's T-Shirt</h1>
-                    <a href=""><button class="card-product-category__btn card-product-category__btn--kid">Buy
+                    <a href="/Product-Category/Kids-category.html"><button class="card-product-category__btn card-product-category__btn--kid">Buy
                             Now</button></a>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                     src="/assets/image/HomePage-Images/Trendy-T Family.jpg" alt="family">
                 <div class="card-product-category__content--demo">
                     <h1 class="card-product-category__title card-product-category__title--family">Family T-Shirt</h1>
-                    <a href=""><button class="card-product-category__btn card-product-category__btn--family">Buy
+                    <a href="/Product-Category/Family-category.html"><button class="card-product-category__btn card-product-category__btn--family">Buy
                             Now</button></a>
                 </div>
             </div>
