update : Cart link in hamburger

--- a/wishlist-page/wishlist.html
+++ b/wishlist-page/wishlist.html
@@ -68,7 +68,7 @@
             <a href="/wishlist-page/wishlist.html">
                 <li class="hamburger__item">Wishlist</li>
             </a>
-            <a href="">
+            <a href="/Cart-Page/cart.html">
                 <li class="hamburger__item">Cart</li>
             </a>
             <a href="">
